[gd_scene load_steps=9 format=3 uid="uid://cms7ivpf3vvf8"]

[ext_resource type="FontFile" uid="uid://bd045hwjmfeax" path="res://Assets/Fonts/Roboto-Regular.ttf" id="1_ecjxq"]
[ext_resource type="Script" path="res://Pages/add_subject.gd" id="2_uxrrb"]
[ext_resource type="Texture2D" uid="uid://bmk8oshxowy1i" path="res://Assets/UI/Button.png" id="3_6ne1k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcl18"]
bg_color = Color(0.13518, 0.000112849, 0.200644, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5j1dl"]
texture = ExtResource("3_6ne1k")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uldtw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ns5h"]
texture = ExtResource("3_6ne1k")
modulate_color = Color(0.294118, 0.294118, 0.294118, 0.760784)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mf4nf"]

[node name="Add_Subject_GWA" type="CanvasLayer"]
script = ExtResource("2_uxrrb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -444.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rcl18")

[node name="Sub_Ed" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 146.0
offset_top = 49.0
offset_right = 559.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 30
alignment = 1
max_length = 14

[node name="Unit_Ed" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 146.0
offset_top = 174.0
offset_right = 275.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 30
alignment = 1
max_length = 5
editable = false

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 262.0
offset_top = 9.0
offset_right = 444.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 25
text = "SUBJECT NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 156.0
offset_top = 137.0
offset_right = 272.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 25
text = "UNIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grade_Ed" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 287.0
offset_top = 174.0
offset_right = 416.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 30
alignment = 1
max_length = 5
editable = false

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 290.0
offset_top = 136.0
offset_right = 406.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 25
text = "GRADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 433.0
offset_top = 137.0
offset_right = 549.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 25
text = "COLOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Add_But" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 473.0
offset_top = 304.0
offset_right = 627.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_5j1dl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uldtw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2ns5h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mf4nf")
disabled = true
text = "ADD"

[node name="Cancel_But" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 307.0
offset_top = 304.0
offset_right = 461.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_5j1dl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uldtw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2ns5h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mf4nf")
text = "CANCEL"

[node name="Color_Label" type="ColorPickerButton" parent="Panel"]
layout_mode = 0
offset_left = 433.0
offset_top = 174.0
offset_right = 559.0
offset_bottom = 224.0
edit_alpha = false

[node name="Label" type="Label" parent="."]
offset_left = 221.0
offset_top = 117.0
offset_right = 478.0
offset_bottom = 172.0
theme_override_fonts/font = ExtResource("1_ecjxq")
theme_override_font_sizes/font_size = 40
text = "ADD SUBJECT"
horizontal_alignment = 1

[connection signal="text_changed" from="Panel/Sub_Ed" to="." method="_on_sub_ed_text_changed"]
[connection signal="text_changed" from="Panel/Unit_Ed" to="." method="_on_unit_ed_text_changed"]
[connection signal="text_changed" from="Panel/Grade_Ed" to="." method="_on_grade_ed_text_changed"]
[connection signal="pressed" from="Panel/Add_But" to="." method="_on_add_but_pressed"]
[connection signal="pressed" from="Panel/Cancel_But" to="." method="_on_cancel_but_pressed"]
[connection signal="color_changed" from="Panel/Color_Label" to="." method="_on_color_label_color_changed"]
